登录页面更新

--- a/src-mobile/login.html
+++ b/src-mobile/login.html
@@ -16,26 +16,26 @@
     <link rel="stylesheet" href="css/amaze/amazeui.css"/>
     <link rel="stylesheet" href="css/amaze/admin.css"/>
     <link rel="stylesheet" href="css/amaze/amazeui.flat.css"/>
-    <link href="css/style.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
-    <div class="am-g">
+    <div class="am-g am-center maindiv">
         <div class="am-u-sm-4 am-u-sm-centered">
             <h1>融成财富后台管理系统</h1>
         </div>
-        <div class="am-u-sm-4 am-u-sm-centered">
+        <div class="am-u-sm-4 am-u-sm-centered formdiv">
             <form>
-                <div>
-                    <input class="" type="text" placeholder="请输入用户名"/>
+                <div class="formdiv">
+                    <input class="am-form-field am-radius" type="text" placeholder="请输入用户名"/>
                 </div>
-                <div>
-                    <input class="" type="password" placeholder="请输入密码"/>
+                <div class="formdiv">
+                    <input class="am-form-field am-radius" type="password" placeholder="请输入密码"/>
                 </div>
-                <div>
+                <div class="am-text-right am-text-sm">
                     <a href="#">忘记密码？</a>
                 </div>
-                <div>
-                    <button type="button" class="">登录</button>
+                <div class="formdiv">
+                    <button type="button" class="am-btn am-btn-primary am-btn-block">登录</button>
                 </div>
             </form>
         </div>
