--- a/src-mobile/index-mobile.html
+++ b/src-mobile/index-mobile.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <div class="secone comwh">
-        <img src="images/gallery/image1.jpg"/>
+        <img src="images/image.jpg"/>
     </div>
     <div class="sectwo">
         <input class="locone" type="tel" placeholder="请输入您的手机号码"/>
