--- a/src-mobile/smsrecord.html
+++ b/src-mobile/smsrecord.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width = device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,initial-scale=1"/>
+    <meta name="format-detection" content="telephone=no,email=no">
     <title>短信申请记录</title>
     <script type="text/javascript" src="js/jquery/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="js/amaze/amazeui.ie8polyfill.js"></script>
@@ -13,49 +16,59 @@
     <link rel="stylesheet" href="css/amaze/amazeui.css"/>
     <link rel="stylesheet" href="css/amaze/admin.css"/>
     <link rel="stylesheet" href="css/amaze/amazeui.flat.css"/>
+    <link rel="stylesheet" href="css/overflow.css">
 </head>
-<body>
-<table class="am-table am-scrollable-horizontal">
-    <thead>
-    <tr>
-        <th>网站名称</th>
-        <th>网址</th>
-        <th>创建时间</th>
-        <th>创建时间</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>Amaze UI</td>
-        <td>http://amazeui.org</td>
-        <td>2012-10-01</td>
-        <td>2012-10-01</td>
-    </tr>
-    <tr>
-        <td>Amaze UI</td>
-        <td>http://amazeui.org</td>
-        <td>2012-10-01</td>
-        <td>2012-10-01</td>
-    </tr>
-    <tr class="am-active">
-        <td>Amaze UI(Active)</td>
-        <td>http://amazeui.org</td>
-        <td>2012-10-01</td>
-        <td>2012-10-01</td>
-    </tr>
-    <tr>
-        <td>Amaze UI</td>
-        <td>http://amazeui.org</td>
-        <td>2012-10-01</td>
-        <td>2012-10-01</td>
-    </tr>
-    <tr>
-        <td>Amaze UI</td>
-        <td>http://amazeui.org</td>
-        <td>2012-10-01</td>
-        <td>2012-10-01</td>
-    </tr>
-    </tbody>
-</table>
+<body class="am-scrollable-horizontal">
+    <div class="am-g am-margin-vertical">
+        <div class="am-u-sm-2 am-text-right">
+            <img src="images/logo.png">
+        </div>
+        <div class="am-u-sm-4"><strong>短信申请记录</strong></div>
+        <div class="am-u-sm-6"></div>
+    </div>
+    <div>
+        <table class="am-table am-scrollable-horizontal am-text-nowrap">
+            <thead>
+            <tr>
+                <th>网站名称</th>
+                <th>网址</th>
+                <th>创建时间</th>
+                <th>创建时间</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>Amaze UI</td>
+                <td>http://amazeui.org</td>
+                <td>2012-10-01</td>
+                <td>2012-10-01</td>
+            </tr>
+            <tr>
+                <td>Amaze UI</td>
+                <td>http://amazeui.org</td>
+                <td>2012-10-01</td>
+                <td>2012-10-01</td>
+            </tr>
+            <tr class="am-active">
+                <td>Amaze UI(Active)</td>
+                <td>http://amazeui.org</td>
+                <td>2012-10-01</td>
+                <td>2012-10-01</td>
+            </tr>
+            <tr>
+                <td>Amaze UI</td>
+                <td>http://amazeui.org</td>
+                <td>2012-10-01</td>
+                <td>2012-10-01</td>
+            </tr>
+            <tr>
+                <td>Amaze UI</td>
+                <td>http://amazeui.org</td>
+                <td>2012-10-01</td>
+                <td>2012-10-01</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
