登录页面更新second

--- a/src-mobile/login1.html
+++ b/src-mobile/login1.html
@@ -40,7 +40,7 @@
             <!--TODO 图标出不来的问题-->
             <form class="am-form">
                 <div class="am-form-group am-form-icon">
-                    <i class="am-icon-user"></i>
+                    <i class="am-icon-calendar"></i>
                     <input type="text" class="am-form-field" placeholder="请输入您的姓名" required>
                 </div>
                 <div class="am-form-group am-form-icon">
