--- a/src-mobile/login1.html
+++ b/src-mobile/login1.html
@@ -42,18 +42,18 @@
             <form class="am-form">
                 <div class="am-form-group am-form-icon">
                     <i class="am-icon-male"></i>
-                    <input type="text" class="am-form-field am-radius" placeholder="请输入您的姓名" required>
+                    <input type="text" class="am-form-field am-radius " placeholder="请输入您的姓名" required>
                 </div>
                 <div class="am-form-group am-form-icon">
                     <i class="am-icon-user"></i>
-                    <input type="tel" class="am-form-field am-radius" placeholder="请输入您的手机号" required>
+                    <input type="tel" class="am-form-field am-radius " placeholder="请输入您的手机号" required>
                 </div>
                 <div class="am-form-group am-form-icon am-g">
-                    <div class="am-u-sm-8 nopadding">
+                    <div class="am-u-sm-7 nopadding">
                         <i class="am-icon"></i>
                         <input type="text" class="am-form-field am-radius match-parent" placeholder="请输入手机验证码" required>
                     </div>
-                    <div class="am-u-sm-4 nopadding">
+                    <div class="am-u-sm-5 nopadding">
                         <a class="am-btn am-btn-secondary am-margin-right-0 match-parent">获取验证码</a>
                     </div>
                 </div>
@@ -67,16 +67,28 @@
         </div>
         <div class="am-g am-margin-top-xl">
             <div class="am-u-sm-3">
-                <img src="images/logo.png">
+                <img src="images/weixinad/速度快.png">
+                <div>
+                    <span>放款速度快</span>
+                </div>
             </div>
             <div class="am-u-sm-3">
-                <img src="images/logo.png">
+                <img src="images/weixinad/期限长.png">
+                <div>
+                    <span>贷款期限长</span>
+                </div>
             </div>
             <div class="am-u-sm-3">
-                <img src="images/logo.png">
+                <img src="images/weixinad/额度高.png">
+                <div>
+                    <span>贷款额度高</span>
+                </div>
             </div>
             <div class="am-u-sm-3">
-                <img src="images/logo.png">
+                <img src="images/weixinad/种类多.png">
+                <div>
+                    <span>产品种类多</span>
+                </div>
             </div>
         </div>
     </div>
