登录页面更新

--- a/src-mobile/login1.html
+++ b/src-mobile/login1.html
@@ -41,16 +41,16 @@
             <!--TODO 图标出不来的问题-->
             <form class="am-form">
                 <div class="am-form-group am-form-icon">
-                    <i class="am-icon-male"></i>
+                    <i class="am-icon-user"></i>
                     <input type="text" class="am-form-field am-radius " placeholder="请输入您的姓名" required>
                 </div>
                 <div class="am-form-group am-form-icon">
-                    <i class="am-icon-user"></i>
+                    <i class="am-icon-phone-square"></i>
                     <input type="tel" class="am-form-field am-radius " placeholder="请输入您的手机号" required>
                 </div>
                 <div class="am-form-group am-form-icon am-g">
                     <div class="am-u-sm-7 nopadding">
-                        <i class="am-icon"></i>
+                        <i class="am-icon-envelope"></i>
                         <input type="text" class="am-form-field am-radius match-parent" placeholder="请输入手机验证码" required>
                     </div>
                     <div class="am-u-sm-5 nopadding">
