短信申请记录

--- a/src-mobile/smsrecord.html
+++ b/src-mobile/smsrecord.html
@@ -17,8 +17,9 @@
     <link rel="stylesheet" href="css/amaze/admin.css"/>
     <link rel="stylesheet" href="css/amaze/amazeui.flat.css"/>
     <link rel="stylesheet" href="css/smsrecord.css"/>
+    <script type="text/javascript" href="js/app.js"></script>
 </head>
-<body class="am-scrollable-horizontal">
+<body class="am-scrollable-horizontal am-scrollable-vertical">
     <div class="am-g am-margin-vertical">
         <div class="am-u-sm-2 am-text-right">
             <img src="images/logo.png">
@@ -37,6 +38,216 @@
             </thead>
             <tbody>
             <tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
+                <td>张三</td>
+                <td>18233333333</td>
+                <td>2017/7/27 9:00:22</td>
+                <td>
+                    <button class="info-status" onclick="handle();">未处理</button>
+                </td>
+            </tr><tr>
                 <td>张三</td>
                 <td>18233333333</td>
                 <td>2017/7/27 9:00:22</td>
