滑动图和音乐播放暂停

--- a/src-mobile/login1.html
+++ b/src-mobile/login1.html
@@ -38,7 +38,6 @@
             </div>
         </div>
         <div class="am-margin-top">
-            <!--TODO 图标出不来的问题-->
             <div class="am-form">
                 <div class="am-form-group am-form-icon">
                     <i class="am-icon-user"></i>
@@ -65,7 +64,7 @@
         <div style="display: none">
             <small>登录即表示同意<a class="am-text-warning" href="#">融成财富服务协议</a></small>
         </div>
-        <div class="am-g am-margin-top-xl">
+        <div class="am-g am-margin-top">
             <div class="am-u-sm-3">
                 <img src="images/weixinad/速度快.png">
                 <div>
@@ -94,28 +93,29 @@
     </div>
     <div class="imginfo" style="display: none">
         <div>
-            <img src="images/blog-wide-img.jpg" />
+            <img src="images/blog-wide-img.jpg"/>
         </div>
 
         <button class="bgp" onclick="nonediv();">
             <img src="images/close.png">
         </button>
     </div>
-    <footer class="am-text-xs am-margin-top-xl">
-        <p>
-            客服电话 : 4006-810-688
-        </p>
-        <p>
-            版权所有: 融成财富（北京）控股有限公司
-        </p>
-        <p>
-            备案号 : 京ICP备16034491号-1
-        </p>
-    </footer>
-    <script rel="script">
-        function nonediv() {
-            $(".imginfo").hide();
-        }
-    </script>
+        <footer class="am-text-xs am-margin-top-xl">
+            <p>
+                客服电话 : 4006-810-688
+            </p>
+            <p>
+                版权所有: 融成财富（北京）控股有限公司
+            </p>
+            <p>
+                备案号 : 京ICP备16034491号-1
+            </p>
+        </footer>
+    </div>
+<script rel="script">
+    function nonediv() {
+        $(".imginfo").hide();
+    }
+</script>
 </body>
 </html>
