--- a/src-mobile/smsrecord.html
+++ b/src-mobile/smsrecord.html
@@ -288,13 +288,20 @@
         </tr>
         </tbody>
     </table>
-
-    <div id="page""></div>
+    <div class="am-panel-bd">
+        <ul id="content" class="am-list am-list-static">
+            <li>北京</li>
+            <li>上海</li>
+            <li>广州</li>
+            <li>深圳</li>
+            <li>杭州</li>
+        </ul>
+    </div>
+    <div id="page"></div>
 </div>
 <script type="text/javascript" src="js/demo.js"></script>
 <script>
-
-
+    $(element).page(option);
     function handle() {
         $(".info-status").parent.addClass("am-warning");
     }
