--- a/src-mobile/resetpwd.html
+++ b/src-mobile/resetpwd.html
@@ -7,13 +7,13 @@
     <meta name="format-detection" content="telephone=no,email=no">
     <meta charset="UTF-8">
     <title>修改密码</title>
-    <script type="text/javascript" src="js/jquery/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript" src="js/amaze/amazeui.ie8polyfill.js"></script>
-    <script type="text/javascript" src="js/amaze/amazeui.js"></script>
-    <script type="text/javascript" src="js/amaze/amazeui.widgets.helper.js"></script>
-    <script type="text/javascript" src="js/amaze/app.js"></script>
-    <script type="text/javascript" src="js/amaze/handlebars.min.js"></script>
-    <script href="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+    <!--<script type="text/javascript" src="js/jquery/jquery-1.10.2.min.js"></script>-->
+    <!--<script type="text/javascript" src="js/amaze/amazeui.ie8polyfill.js"></script>-->
+    <!--<script type="text/javascript" src="js/amaze/amazeui.js"></script>-->
+    <!--<script type="text/javascript" src="js/amaze/amazeui.widgets.helper.js"></script>-->
+    <!--<script type="text/javascript" src="js/amaze/app.js"></script>-->
+    <!--<script type="text/javascript" src="js/amaze/handlebars.min.js"></script>-->
+    <!--<script href="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>-->
     <link rel="stylesheet" href="css/amaze/amazeui.css"/>
     <link rel="stylesheet" href="css/amaze/admin.css"/>
     <link rel="stylesheet" href="css/amaze/amazeui.flat.css"/>
@@ -32,7 +32,7 @@
                 <input class="am-form-field am-radius" type="text" placeholder="请输入手机号"/>
             </div>
             <div class="formdiv am-g">
-                <div class="am-u-sm-7 "><input id="doc-ipt-success" class="am-form-field am-radius" type="text" placeholder="验证码"/></span></div>
+                <div class="am-u-sm-7 "><input class="am-form-field am-radius" type="text" placeholder="验证码"/></span></div>
                 <div class="am-u-sm-5"><img src="http://192.168.1.213:8080//img/randomcode"/></div>
             </div>
             <div class="formdiv am-g">
