--- a/src-mobile/resetpwd.html
+++ b/src-mobile/resetpwd.html
@@ -22,6 +22,10 @@
         .formdiv{
             margin-top: 20px;
         }
+        .am-icon-check{
+            color: green;
+            margin-left: 20px;
+        }
     </style>
 </head>
 <body>
@@ -32,7 +36,10 @@
                 <input class="am-form-field am-radius" type="text" placeholder="请输入手机号"/>
             </div>
             <div class="formdiv am-g">
-                <div class="am-u-sm-7 "><input class="am-form-field am-radius" type="text" placeholder="验证码"/></span></div>
+                <div class="am-u-sm-7 am-form-group am-form-icon ">
+                    <i class="am-icon-check"></i>
+                    <input class="am-form-field am-radius" type="text" placeholder="验证码"/></span>
+                </div>
                 <div class="am-u-sm-5"><img src="http://192.168.1.213:8080//img/randomcode"/></div>
             </div>
             <div class="formdiv am-g">
