--- a/src-mobile/resetpwd.html
+++ b/src-mobile/resetpwd.html
@@ -26,6 +26,9 @@
             color: green;
             margin-left: 20px;
         }
+        .am-form-group{
+            margin-bottom: 0;
+        }
     </style>
 </head>
 <body>
